# langfuse_learn

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements-dev.txt
app/: main.py
app/api/: routes.py
app/ui/: app.py
embedding/: client.py
ingestion/: pipeline.py
ingestion/loaders/: base_loader.py  docx_loader.py  html_loader.py  loader_factory.py  pdf_loader.py  text_loader.py
llm/: generator.py
rag/: pipeline.py
retrieval/: reranker.py  retriever.py
src/rag_app/: __init__.py
src/rag_app/api/: app.py
src/rag_app/config/: settings.py
src/rag_app/core/: __init__.py  generator.py  retriever.py  vectorstore.py
src/rag_app/utils/: logging.py
tests/: test_app.py
ui/: app.py
vectorstore/: base.py  chroma_store.py  factory.py
