[project]
name = "rag-app"
version = "0.1.0"
description = "Production-grade RAG application with Langfuse monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=4.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tiktoken>=0.5.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app"]
